--- a/Code samples/StandAlone_CreateEmptyFileBasedTMFromAnother_UsingSameResources/StandAlone_CreateEmptyFileBasedTMFromAnother_UsingSameResources.csproj
+++ b/Code samples/StandAlone_CreateEmptyFileBasedTMFromAnother_UsingSameResources/StandAlone_CreateEmptyFileBasedTMFromAnother_UsingSameResources.csproj
@@ -4,7 +4,7 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <PlatformTarget>x86</PlatformTarget>
     <OutputType>Exe</OutputType>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
