--- a/MXLIFF File Type/Sdl.Community.FileTypeSupport.MXLIFF.csproj
+++ b/MXLIFF File Type/Sdl.Community.FileTypeSupport.MXLIFF.csproj
@@ -4,8 +4,8 @@
 		<UseWPF>true</UseWPF>
 		<TargetFramework>net48</TargetFramework>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
+		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
 	<ItemGroup>
 	  <None Remove="Resources\Information.png" />
