--- a/Trados Studio InQuote/Sdl.Community.InvoiceAndQuotes/Sdl.Community.InvoiceAndQuotes.csproj
+++ b/Trados Studio InQuote/Sdl.Community.InvoiceAndQuotes/Sdl.Community.InvoiceAndQuotes.csproj
@@ -5,7 +5,7 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<SignAssembly>True</SignAssembly>
 		<AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Resources\**" />
