--- a/CleanUp Tasks/CleanUpTasks/Sdl.Community.CleanUpTasks.csproj
+++ b/CleanUp Tasks/CleanUpTasks/Sdl.Community.CleanUpTasks.csproj
@@ -10,7 +10,8 @@
     <RootNamespace>SDLCommunityCleanUpTasks</RootNamespace>
     <AssemblyName>SDLCommunityCleanUpTasks</AssemblyName>
     <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
+	  <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
