--- a/TermExcelerator/Sdl.Community.TermExcelerator/Sdl.Community.TermExcelerator.csproj
+++ b/TermExcelerator/Sdl.Community.TermExcelerator/Sdl.Community.TermExcelerator.csproj
@@ -3,9 +3,9 @@
 	<PropertyGroup>
 		<TargetFramework>net48</TargetFramework>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<UseWPF>true</UseWPF>
 	</PropertyGroup>
   <ItemGroup>
