--- a/Trados Translation Memory Management Utility/Sdl.Community.TranslationMemoryManagementUtility/Sdl.Community.TranslationMemoryManagementUtility.csproj
+++ b/Trados Translation Memory Management Utility/Sdl.Community.TranslationMemoryManagementUtility/Sdl.Community.TranslationMemoryManagementUtility.csproj
@@ -7,8 +7,8 @@
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
-    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
+    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Desktop.IntegrationApi">
