--- a/Trados Translation Memory Management Utility/Sdl.Community.Utilities.TMTool.Task/Sdl.Community.Utilities.TMTool.Task.csproj
+++ b/Trados Translation Memory Management Utility/Sdl.Community.Utilities.TMTool.Task/Sdl.Community.Utilities.TMTool.Task.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net48</TargetFramework>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
