Update reference path to point to Program Files

--- a/Code samples/Plugin_ModifyAutoSubstitutionSettings/Plugin_ModifyAutoSubstitutionSettings.csproj
+++ b/Code samples/Plugin_ModifyAutoSubstitutionSettings/Plugin_ModifyAutoSubstitutionSettings.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net48</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Core.Globalization">
