--- a/IATE Real-time Terminology/IATETerminologyProvider/Sdl.Community.IATETerminologyProvider.csproj
+++ b/IATE Real-time Terminology/IATETerminologyProvider/Sdl.Community.IATETerminologyProvider.csproj
@@ -37,7 +37,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <ItemGroup>
