--- a/SDLXLIFF to Legacy Converter/Sdl.Community.XliffToLegacyConverter/Sdl.Community.XliffToLegacyConverter.csproj
+++ b/SDLXLIFF to Legacy Converter/Sdl.Community.XliffToLegacyConverter/Sdl.Community.XliffToLegacyConverter.csproj
@@ -71,7 +71,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>false</SignManifests>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
