--- a/AutoHotKey Manager/Sdl.Community.AhkPlugin/Sdl.Community.AhkPlugin.csproj
+++ b/AutoHotKey Manager/Sdl.Community.AhkPlugin/Sdl.Community.AhkPlugin.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net48</TargetFramework>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
 
 	<PropertyGroup>
