--- a/Code samples/GlobalVerifierSample/GlobalVerifierSample/GlobalVerifierSample.csproj
+++ b/Code samples/GlobalVerifierSample/GlobalVerifierSample/GlobalVerifierSample.csproj
@@ -5,7 +5,7 @@
 		<OutputType>Library</OutputType>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<UseWindowsForms>true</UseWindowsForms>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
 	</PropertyGroup>
 	<ItemGroup>
