--- a/Code samples/StandAloneConsoleApp_PretranslateUsingLanguageWeaverProvider/StandAloneConsoleApp_PretranslateUsingLanguageWeaverProvider.csproj
+++ b/Code samples/StandAloneConsoleApp_PretranslateUsingLanguageWeaverProvider/StandAloneConsoleApp_PretranslateUsingLanguageWeaverProvider.csproj
@@ -7,7 +7,7 @@
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<EmbeddedResourceUseDependentUponConvention>true</EmbeddedResourceUseDependentUponConvention>
 		<SignAssembly>true</SignAssembly>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
 		<OutputType>Exe</OutputType>
 		<OutputPath>$(TradosFolder)\</OutputPath>
 		<PlatformTarget>x86</PlatformTarget>
