--- a/SDLXLIFF to Legacy Converter/Sdl.Community.XliffReadWrite/Sdl.Community.XliffReadWrite.csproj
+++ b/SDLXLIFF to Legacy Converter/Sdl.Community.XliffReadWrite/Sdl.Community.XliffReadWrite.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <DelaySign>false</DelaySign>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Core.Globalization">
