--- a/Segment Status Switcher/Sdl.Community.SegmentStatusSwitcher/Sdl.Community.SegmentStatusSwitcher.csproj
+++ b/Segment Status Switcher/Sdl.Community.SegmentStatusSwitcher/Sdl.Community.SegmentStatusSwitcher.csproj
@@ -9,7 +9,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <ItemGroup>
