--- a/Target Word Count/Sdl.Community.TargetWordCount/Sdl.Community.TargetWordCount.csproj
+++ b/Target Word Count/Sdl.Community.TargetWordCount/Sdl.Community.TargetWordCount.csproj
@@ -37,7 +37,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
