--- a/Trados Studio InQuote/Sdl.Community.InvoiceAndQuotes.Integration/Sdl.Community.InvoiceAndQuotes.Integration.csproj
+++ b/Trados Studio InQuote/Sdl.Community.InvoiceAndQuotes.Integration/Sdl.Community.InvoiceAndQuotes.Integration.csproj
@@ -5,7 +5,7 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<CreatePluginPackage>true</CreatePluginPackage>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Desktop.IntegrationApi">
