--- a/Trados Transcreate/SDLTranscreate/Transcreate.csproj
+++ b/Trados Transcreate/SDLTranscreate/Transcreate.csproj
@@ -12,7 +12,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Rws.MultiSelectComboBox">
