--- a/TransitPackage Handler/Sdl.Community.StarTransit.UnitTests/Sdl.Community.StarTransit.UnitTests.csproj
+++ b/TransitPackage Handler/Sdl.Community.StarTransit.UnitTests/Sdl.Community.StarTransit.UnitTests.csproj
@@ -4,7 +4,7 @@
     <OutputType>Library</OutputType>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Core.Globalization">
