--- a/TransitPackage Handler/Sdl.Community.StarTransit/Sdl.Community.StarTransit.csproj
+++ b/TransitPackage Handler/Sdl.Community.StarTransit/Sdl.Community.StarTransit.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\debug</OutputPath>
