--- a/YourProductivity/Sdl.Community.YourProductivity.Controls/Sdl.Community.YourProductivity.Persistance.csproj
+++ b/YourProductivity/Sdl.Community.YourProductivity.Controls/Sdl.Community.YourProductivity.Persistance.csproj
@@ -5,7 +5,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
