Studio 2026 change references to accommodate Studio Quantum Beta  (#1796)
* Update references to accomodate Studio Quantum Beta

* minor change

* Update reference path to point to Program Files

--- a/AutoHotKey Manager/Sdl.Community.AhkPlugin/Sdl.Community.AhkPlugin.csproj
+++ b/AutoHotKey Manager/Sdl.Community.AhkPlugin/Sdl.Community.AhkPlugin.csproj
@@ -2,8 +2,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net48</TargetFramework>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
+		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
 
 	<PropertyGroup>
