--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare/Sdl.Community.PostEdit.Compare.csproj
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare/Sdl.Community.PostEdit.Compare.csproj
@@ -9,7 +9,7 @@
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
-    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
