--- a/TermExcelerator/Sdl.Community.TermExcelerator.Tests/Sdl.Community.TermExcelerator.Tests.csproj
+++ b/TermExcelerator/Sdl.Community.TermExcelerator.Tests/Sdl.Community.TermExcelerator.Tests.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Core.Globalization.Async">
