--- a/Trados Studio Target Renamer/Trados.TargetRenamer/Trados.TargetRenamer/Trados.TargetRenamer.csproj
+++ b/Trados Studio Target Renamer/Trados.TargetRenamer/Trados.TargetRenamer/Trados.TargetRenamer.csproj
@@ -14,8 +14,8 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
+		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
 
 	<ItemGroup>
