--- a/Trados Transcreate/SDLTranscreate/Transcreate.csproj
+++ b/Trados Transcreate/SDLTranscreate/Transcreate.csproj
@@ -5,14 +5,14 @@
     <RootNamespace>Trados.Transcreate</RootNamespace>
     <AssemblyName>Trados.Transcreate</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
     <UseWindowsForms>true</UseWindowsForms>
     <UseWPF>true</UseWPF>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Rws.MultiSelectComboBox">
