--- a/Trados Translation Memory Management Utility/Sdl.Community.Utilities.TMTool.Tasks.RevertIndex/Sdl.Community.Utilities.TMTool.Tasks.RevertIndex.csproj
+++ b/Trados Translation Memory Management Utility/Sdl.Community.Utilities.TMTool.Tasks.RevertIndex/Sdl.Community.Utilities.TMTool.Tasks.RevertIndex.csproj
@@ -13,8 +13,8 @@
     <AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
-    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.LanguagePlatform.TranslationMemory">
