Cohere Subscription: introduce subscription workflow, decision logic, and startup orchestration

--- a/Language Weaver Provider/LanguageWeaverProvider.csproj
+++ b/Language Weaver Provider/LanguageWeaverProvider.csproj
@@ -85,6 +85,9 @@
 		<Reference Include="Sdl.LanguageCloud.IdentityApi">
 			<HintPath>$(TradosFolder)\Sdl.LanguageCloud.IdentityApi.dll</HintPath>
 		</Reference>
+		<Reference Include="System.Reactive">
+			<HintPath>$(TradosFolder)\System.Reactive.dll</HintPath>
+		</Reference>
 		<Reference Include="Microsoft.Web.WebView2.Wpf">
 		  <HintPath>$(TradosFolder)\Microsoft.Web.WebView2.WPF.dll</HintPath>
 		</Reference>
